<resources>
    <string name="app_name">DB</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_unique_id">Enter Unique ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome">WELCOME,</string>
    <string name="sign_up_to_continue">SIGN UP TO CONTINUE</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="here_are_your_details">Here are your details:</string>
</resources>