<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    tools:context=".SignInActivity">
    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:text="@string/sign_in_to_continue"/>


        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
        app:boxStrokeColor="@color/pink">
        <EditText
            android:id="@+id/userNameEditText"
            android:hint="@string/enter_unique_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:backgroundTint="@color/pink"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
</LinearLayout>